--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ border-radius: 19px 19px 19px 19px;
     </div>
     <div id="scrolling-container">
       <a href="pop_index.html" >
-      <marquee direction="scroll" id="scrolling-button">For my Babe</marquee>
+      <marquee direction="scroll" id="scrolling-button">For my Bestie</marquee>
       </a>
     </div>
 </body>
